@@ -2,12 +2,12 @@ package com.sleekydz86.finsight.core.news.adapter.persistence.command;
 
 import com.sleekydz86.finsight.core.news.domain.News;
 import com.sleekydz86.finsight.core.news.domain.Newses;
-import com.sleekydz86.finsight.core.news.domain.port.in.NewsQueryRequest;
+import com.sleekydz86.finsight.core.news.domain.port.in.dto.NewsQueryRequest;
 import com.sleekydz86.finsight.core.news.domain.port.out.NewsPersistencePort;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Repository
 public class NewsRepositoryImpl implements NewsPersistencePort {
@@ -24,26 +24,34 @@ public class NewsRepositoryImpl implements NewsPersistencePort {
     public Newses saveAllNews(List<News> newses) {
         List<NewsJpaEntity> entities = newses.stream()
                 .map(newsJpaMapper::toEntity)
-                .collect(Collectors.toList());
+                .toList();
 
-        List<News> savedNewses = newsJpaRepository.saveAll(entities).stream()
+        List<NewsJpaEntity> savedEntities = newsJpaRepository.saveAll(entities);
+
+        return new Newses(savedEntities.stream()
                 .map(newsJpaMapper::toDomain)
-                .collect(Collectors.toList());
-
-        return new Newses(savedNewses);
+                .toList());
     }
 
     @Override
     public Newses findByOverviewIsNull() {
         List<NewsJpaEntity> entities = newsJpaRepository.findByOverviewIsNull();
-        List<News> foundNewses = entities.stream()
+        return new Newses(entities.stream()
                 .map(newsJpaMapper::toDomain)
-                .collect(Collectors.toList());
-        return new Newses(foundNewses);
+                .toList());
     }
 
     @Override
     public Newses findAllByFilters(NewsQueryRequest request) {
-        throw new UnsupportedOperationException("Not yet implemented");
+        List<NewsJpaEntity> entities = newsJpaRepository.findAll();
+        return new Newses(entities.stream()
+                .map(newsJpaMapper::toDomain)
+                .toList());
+    }
+
+    @Override
+    public Optional<News> findById(Long newsId) {
+        return newsJpaRepository.findById(newsId)
+                .map(newsJpaMapper::toDomain);
     }
 }
